syntax = "proto3";

package pb;

option go_package = "bitmoi/gapi/pb";

import "validate/validate.proto";

message CandlesRequest{
	string names = 1;
	string mode = 2  [(validate.rules).string = {in: ["practice","competition"]}];
	string user_id = 3;
}

message CandlesResponse{
	string name = 1;
	CandleData one_chart = 2;
	double btc_ratio = 3;
	string entry_time = 4;
	double entry_price = 5;
	string identifier = 6;
}

message CandleData {
	repeated PriceData pData = 1;
	repeated VolumeData vData = 2;
}

message PriceData {
	double open = 1;
	double close = 2;
	double high = 3;
	double low  = 4;
	int64 time = 5;
}

message VolumeData {
	double value = 1;
	int64 time = 2;
	string color = 3;
}